--- a/templates/result.html
+++ b/templates/result.html
@@ -8,11 +8,16 @@
     <title>Vitamin Recommendation Result</title>
 </head>
 
-<body>
-    <div class="container">
-        <h1 class="mt-5">Your Vitamin Recommendation</h1>
-        <p class="mt-4">{{ prediction }}</p>
-        <a href="/" class="btn btn-secondary">Try Again</a>
+<body class="bg-light">
+    <div class="container mt-5">
+        <h1 class="text-center">Your Vitamin Recommendation</h1>
+        <div class="alert alert-info text-center mt-4" role="alert">
+            {{ prediction }}
+        </div>
+        <a href="/" class="btn btn-secondary btn-block">Try Again</a>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
